<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:background="@drawable/bg_univserse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/transparent_black_forty"
        app:popupTheme="@style/AppTheme"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="center"
        android:elevation="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            />


    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@color/transparent"

        android:orientation="vertical"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn3"
            android:padding="5dp"
            android:text="Manually-generate new key"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_change_state"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1"
            android:padding="5dp"
            android:layout_marginTop="25dp"
            android:text="Auto-generate new key"
            android:textColor="@color/white"
            android:background="@drawable/bg_button_change_state"
            />

    </LinearLayout>



</RelativeLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="#dd7d5ee2"
         >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:id="@+id/txtHeader"
        android:background="@drawable/bg_navigation_header"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="My header title"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:text="@string/nav_store"
        android:padding="3dp"
        android:id="@+id/nav_store"
        android:drawableStart="@drawable/ic_store_black_24dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:text="@string/nav_sign_out"
        android:padding="3dp"
        android:layout_marginTop="2dp"
        android:id="@+id/nav_sign_out"
        android:drawableStart="@drawable/ic_logout"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:text="@string/nav_del_data"
        android:padding="3dp"
        android:layout_marginTop="2dp"
        android:id="@+id/nav_del_data"
        android:drawableStart="@drawable/ic_delete_database"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:text="@string/nav_del_usr"
        android:padding="3dp"
        android:layout_marginTop="2dp"
        android:id="@+id/nav_del_usr"
        android:drawableStart="@drawable/ic_delete_user"
        />
</LinearLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
